chore: use i-carbon-logo-github

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         Toggle Light/Dark Mode
       </button>
       <a
+        i-carbon-logo-github
         href="https://github.com/ydcjeff/unocss-preset-typography"
         target="_blank"
         rel="noopener noreferrer"
