--- a/index.html
+++ b/index.html
@@ -13,16 +13,7 @@
   </head>
 
   <body class="bg-white font-sans m-0 py-6 px-4 antialiased dark:bg-dark-800">
-    <main
-      class="
-        mx-auto
-        prose prose-truegray
-        lg:prose-lg
-        xl:prose-xl
-        2xl:prose-2xl
-        dark:prose-invert
-      "
-    >
+    <main class="mx-auto text-base prose prose-truegray dark:prose-invert">
       <button
         un-m="b-4"
         un-p="x-2 y-2"
@@ -36,6 +27,7 @@
         Toggle Light/Dark Mode
       </button>
       <a
+        class="not-prose"
         i-carbon-logo-github
         href="https://github.com/ydcjeff/unocss-preset-typography"
         target="_blank"
