--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     />
   </head>
 
-  <body class="bg-white font-sans m-0 py-6 px-4 antialiased dark:bg-dark-800">
-    <main class="mx-auto text-base prose-truegray" dark="prose-invert" prose>
+  <body class="bg-white font-sans m-0 py-6 px-4 antialiased dark:bg-dark-700">
+    <main class="mx-auto text-base prose-gray" dark="prose-invert" prose>
       <button
         un-m="b-4"
         un-p="x-2 y-2"
@@ -35,6 +35,9 @@
         >GitHub</a
       >
       <span>(This link does not have prose styles applied)</span>
+      <div>
+        This page itself is using <code>unocss-preset-typography</code>.
+      </div>
       <div id="demo"></div>
     </main>
 
