chore: update demo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body class="bg-white font-sans m-0 py-6 px-4 antialiased dark:bg-dark-700">
-    <main class="mx-auto text-base prose-gray" dark="prose-invert" prose>
+    <main class="mx-auto text-base prose-zinc" dark="prose-invert" prose>
       <button
         un-m="b-4"
         un-p="x-2 y-2"
